fix the desc display on small viewpoint

--- a/source/css/_header.styl
+++ b/source/css/_header.styl
@@ -52,6 +52,9 @@
         p
             font-size: $font-h4
             color: $color-header-detail
+            text-overflow: ellipsis
+            white-space: nowrap
+            overflow: hidden
 
             @media only screen and (max-width: $vw-level-two)
                 font-size: $font-h6
